@@ -1,3 +1,8 @@
+Sun May 16 23:14:37 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkhruler.c (gtk_hruler_draw_ticks): Remove two useless 
+	lines.  (#142479, Morten Welinder)
+
 2004-05-15  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkdnd-win32.c: Put back the ref_count field in the
